--- a/css/scss/blocks/hero.scss
+++ b/css/scss/blocks/hero.scss
@@ -20,9 +20,9 @@
     padding-top: 50px;
   }
 
-  @media (max-width: 1280px) {
-    padding: 0 15px;
-  }
+  // @media (max-width: 1280px) {
+  //   padding: 0 15px;
+  // }
 
   @media (max-width: 750px) {
     background-position: -733px 0px;
