--- a/css/scss/blocks/subscribe.scss
+++ b/css/scss/blocks/subscribe.scss
@@ -77,7 +77,6 @@
   }
 
   &__btn {
-    // width: 400px;
     padding: 12px 24px;
     background-color: #ffffff;
     box-shadow: 0px 0px 30px 5px rgba(0, 0, 0, 0.15);
@@ -90,5 +89,18 @@
   @media (max-width: 950px) {
     flex-direction: column-reverse;
     align-items: center;
+
+    &__btn {
+      width: 325px;
+    }
+  }
+
+  @media (max-width: 650px) {
+    width: 100%;
+    padding: 0 15px;
+
+    &__btn {
+      width: 100%;
+    }
   }
 }
